[package]
name = "terrain-gen"
version = "0.1.0"
authors = ["Tyler Tracy <tylertracy1999@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
world = { path = "../world" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
noise = "0.8.2"
web-sys = "0.3.64"
rand = { version = "0.8.5" }
rand_distr = "0.4.3"
getrandom = { version = "0.2", features = ["js"] }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
